m8-a03-cloudformation/ec2.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: Deploys an EC2 instance with Apache and SSH access.

Parameters:
  AmiID:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/al2023-ami-kernel-default-x86_64
    Description: Latest Amazon Linux 2023 AMI

  InstanceType:
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
    Description: EC2 instance type

  KeyName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: Name of an existing EC2 KeyPair for SSH access

  MyVPC:
    Type: AWS::EC2::VPC::Id
    Description: Select your VPC

  PublicSubnet:
    Type: AWS::EC2::Subnet::Id
    Description: Select a public subnet with internet access

  MyIP:
    Type: String
    AllowedPattern: '^(([0-9]{1,3}\.){3}[0-9]{1,3})(\/32)$'
    ConstraintDescription: Must be a valid IP CIDR (e.g., 203.0.113.5/32)
    Description: Your IP address in CIDR format for SSH access

Resources:

  EC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH and HTTP traffic
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref MyIP
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: !Ref MyIP
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-SG

  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      ImageId: !Ref AmiID
      KeyName: !Ref KeyName
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-Instance
      NetworkInterfaces:
        - DeviceIndex: 0
          SubnetId: !Ref PublicSubnet
          AssociatePublicIpAddress: true
          GroupSet:
            - !Ref EC2SecurityGroup
          DeleteOnTermination: true
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash -xe
          exec > /var/log/user-data.log 2>&1
          sudo dnf update -y
          sudo dnf install -y httpd
          echo "Hello from CloudFormation EC2" | sudo tee /var/www/html/index.html > /dev/null
          sudo chown apache:apache /var/www/html/index.html
          sudo chmod 644 /var/www/html/index.html
          sudo systemctl enable httpd
          sudo systemctl start httpd

Outputs:
  InstancePublicIP:
    Description: Public IP of the EC2 instance
    Value: !GetAtt EC2Instance.PublicIp

  InstancePublicDNS:
    Description: Public DNS of the EC2 instance
    Value: !GetAtt EC2Instance.PublicDnsName
